[metadata]
name = slash_util
version = 1.3.1
author = XuaTheGrate
author_email = 17090652+XuaTheGrate@users.noreply.github.com
description = A small script allowing the use of application commands with discord.py v2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XuaTheGrate/slash_util
project_urls =
    Bug Tracker = https://github.com/XuaTheGrate/slash_util/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Typing :: Typed

[options]
package_dir = 
    = .
packages = slash_util
install_requires =
    discord.py >= 2.0.0a
python_requires = >=3.8
